Caja de Header agregado, Carpeta Img agregado

--- a/stylus/estilo.styl
+++ b/stylus/estilo.styl
@@ -1,2 +1,46 @@
-h1
-	color green
+@import "normalize.styl"
+
+gris-oscuro = #333333
+gris-claro = #818181
+body
+	font-size 16px
+	font-family 'Varela Round', sans-serif
+figure
+	margin 0
+a 
+	text-decoration none
+.header
+	height 3.5em
+	.menu
+		display none
+	.title
+		font-size 1.1em
+		text-align center
+		margin 0
+		line-height 3.5em
+.border-bottom
+	border-bottom 1px solid gris-claro
+.container
+	padding 1.4rem
+	font-size 0
+	text-align center
+.button-menu
+	position absolute
+	top 50%
+	left .5em
+	margin-top -10px
+//OOCSS Clases
+.relative
+	position relative
+.name
+	color gris-oscuro
+.autor
+	color gris-claro
+.song
+	width 8rem
+	display inline-block
+	font-size 1rem
+	margin 0 .5em 1em .5em
+	text-align left
+	p
+		margin .5em 0
