--- a/stylus/normalize.styl
+++ b/stylus/normalize.styl
@@ -1,16 +1,4 @@
-/*! normalize.css v3.0.1 | MIT License | git.io/normalize */
-
-/*Normalize in file .styl (Stylus) By: Ernesto Valenzuela Vargas @programminghack
-*/
-
-
-/*NOTE: place this file in the folder where is your main file
-use @import normalize.styl for add the file to your main desing. for more information please contact me: programminghack@gmail.com*/
-
-
-/*Note: a small modification of the label (figure) modified 1em 40px by 0 px (modified by Ernesto Valenzuela Vargas)*/
-
-
+/*! normalize.css v3.0.0 | MIT License | git.io/normalize */
 
 /**
  * 1. Set default font family to sans-serif.
@@ -19,25 +7,22 @@ use @import normalize.styl for add the file to your main desing. for more inform
  */
 
 html
-  font-family sans-serif
-  -ms-text-size-adjust 100%
-  -webkit-text-size-adjust 100%
+  font-family: sans-serif // 1
+  -ms-text-size-adjust: 100% // 2
+  -webkit-text-size-adjust: 100% // 2
 
 /**
  * Remove default margin.
  */
 
 body
-  margin 0
-
+  margin: 0
 
 /* HTML5 display definitions
    ========================================================================== */
 
 /**
- * Correct `block` display not defined for any HTML5 element in IE 8/9.
- * Correct `block` display not defined for `details` or `summary` in IE 10/11 and Firefox.
- * Correct `block` display not defined for `main` in IE 11.
+ * Correct `block` display not defined in IE 8/9.
  */
 
 article,
@@ -52,8 +37,7 @@ main,
 nav,
 section,
 summary
-  display block
-
+  display: block
 
 /**
  * 1. Correct `inline-block` display not defined in IE 8/9.
@@ -63,9 +47,9 @@ summary
 audio,
 canvas,
 progress,
-video 
-  display inline-block
-  vertical-align baseline
+video
+  display: inline-block // 1
+  vertical-align: baseline // 2
 
 /**
  * Prevent modern browsers from displaying `audio` without controls.
@@ -73,91 +57,80 @@ video
  */
 
 audio:not([controls])
-  display none
-  height 0
-
+  display: none
+  height: 0
 
 /**
- * Address `[hidden]` styling not present in IE 8/9/10.
- * Hide the `template` element in IE 8/9/11, Safari, and Firefox < 22.
+ * Address `[hidden]` styling not present in IE 8/9.
+ * Hide the `template` element in IE, Safari, and Firefox < 22.
  */
 
 [hidden],
-template 
-  display none
-
+template
+  display: none
 
 /* Links
    ========================================================================== */
 
 /**
- * Remove the gray background color from active links in IE 10.
+ * 1. Remove the gray background color from active links in IE 10.
+ * 2. Improve readability when focused and also mouse hovered in all browsers.
  */
 
 a
-  background transparent
-
-/**
- * Improve readability when focused and also mouse hovered in all browsers.
- */
-
-a:active,
-a:hover
-  outline 0
+  background: transparent // 1
+  &:active,
+  &:hover
+    outline: 0 // 2
 
 /* Text-level semantics
    ========================================================================== */
 
 /**
- * Address styling not present in IE 8/9/10/11, Safari, and Chrome.
+ * Address styling not present in IE 8/9, Safari 5, and Chrome.
  */
 
 abbr[title]
-  border-bottom 1px dotted
+  border-bottom: 1px dotted
 
 /**
- * Address style set to `bolder` in Firefox 4+, Safari, and Chrome.
+ * Address style set to `bolder` in Firefox 4+, Safari 5, and Chrome.
  */
 
 b,
-strong 
-  font-weight bold
-
+strong
+  font-weight: bold
 
 /**
- * Address styling not present in Safari and Chrome.
+ * Address styling not present in Safari 5 and Chrome.
  */
 
 dfn
-  font-style italic
-
+  font-style: italic
 
 /**
  * Address variable `h1` font-size and margin within `section` and `article`
- * contexts in Firefox 4+, Safari, and Chrome.
+ * contexts in Firefox 4+, Safari 5, and Chrome.
  */
 
 h1
-  font-size 2em
-  margin 0.67em 0
-
+  font-size: 2em
+  margin: 0.67em 0
 
 /**
  * Address styling not present in IE 8/9.
  */
 
 mark
-  background #ff0
-  color #000
-
+  background: #ff0
+  color: #000
 
 /**
  * Address inconsistent and variable font size in all browsers.
  */
 
 small
-  font-size 80%
-
+  font-size: 80%
 
 /**
  * Prevent `sub` and `sup` affecting `line-height` in all browsers.
@@ -165,65 +138,59 @@ small
 
 sub,
 sup
-  font-size 75%
-  line-height 0
-  position relative
-  vertical-align baseline
-
+  font-size: 75%
+  line-height: 0
+  position: relative
+  vertical-align: baseline
 
 sup
-  top -0.5em
+  top: -0.5em
 
 sub
-  bottom -0.25em
-
+  bottom: -0.25em
 
 /* Embedded content
    ========================================================================== */
 
 /**
- * Remove border when inside `a` element in IE 8/9/10.
+ * Remove border when inside `a` element in IE 8/9.
  */
 
 img
-  border 0
+  border: 0
 
 /**
- * Correct overflow not hidden in IE 9/10/11.
+ * Correct overflow displayed oddly in IE 9.
  */
 
-svg:not(:root) 
-  overflow hidden
-
+svg:not(:root)
+  overflow: hidden
 
 /* Grouping content
    ========================================================================== */
 
 /**
- * Address margin not present in IE 8/9 and Safari.
+ * Address margin not present in IE 8/9 and Safari 5.
  */
 
 figure
-  margin 0 /*MODIFICATION*/
-
+  margin: 1em 40px
 
 /**
  * Address differences between Firefox and other browsers.
  */
 
 hr
-  -moz-box-sizing content-box
-  box-sizing content-box
-  height 0
-
+  -moz-box-sizing: content-box
+  box-sizing: content-box
+  height: 0
 
 /**
  * Contain overflow in all browsers.
  */
 
-pre 
-  overflow auto
-
+pre
+  overflow: auto
 
 /**
  * Address odd `em`-unit font size rendering in all browsers.
@@ -232,10 +199,9 @@ pre
 code,
 kbd,
 pre,
-samp 
-  font-family monospace monospace
-  font-size 1em
-
+samp
+  font-family: monospace, monospace
+  font-size: 1em
 
 /* Forms
    ========================================================================== */
@@ -249,35 +215,35 @@ samp
  * 1. Correct color not being inherited.
  *    Known issue: affects color of disabled elements.
  * 2. Correct font properties not being inherited.
- * 3. Address margins set differently in Firefox 4+, Safari, and Chrome.
+ * 3. Address margins set differently in Firefox 4+, Safari 5, and Chrome.
  */
 
 button,
 input,
 optgroup,
 select,
-textarea 
-  color inherit
-  font inherit
-  margin 0
+textarea
+  color: inherit // 1
+  font: inherit // 2
+  margin: 0 // 3
 
 /**
- * Address `overflow` set to `hidden` in IE 8/9/10/11.
+ * Address `overflow` set to `hidden` in IE 8/9/10.
  */
 
 button
-  overflow visible
+  overflow: visible
 
 /**
  * Address inconsistent `text-transform` inheritance for `button` and `select`.
  * All other form control elements do not inherit `text-transform` values.
- * Correct `button` style inheritance in Firefox, IE 8/9/10/11, and Opera.
+ * Correct `button` style inheritance in Firefox, IE 8+, and Opera
  * Correct `select` style inheritance in Firefox.
  */
 
 button,
 select
-  text-transform none
+  text-transform: none
 
 /**
  * 1. Avoid the WebKit bug in Android 4.0.* where (2) destroys native `audio`
@@ -288,11 +254,11 @@ select
  */
 
 button,
-html input[type="button"],
+html input[type="button"], // 1
 input[type="reset"],
 input[type="submit"]
-  -webkit-appearance button
-  cursor pointer
+  -webkit-appearance: button // 2
+  cursor: pointer // 3
 
 /**
  * Re-set default cursor for disabled elements.
@@ -300,7 +266,7 @@ input[type="submit"]
 
 button[disabled],
 html input[disabled]
-  cursor default
+  cursor: default
 
 /**
  * Remove inner padding and border in Firefox 4+.
@@ -308,8 +274,8 @@ html input[disabled]
 
 button::-moz-focus-inner,
 input::-moz-focus-inner
-  border 0
-  padding 0
+  border: 0
+  padding: 0
 
 /**
  * Address Firefox 4+ setting `line-height` on `input` using `!important` in
@@ -317,7 +283,7 @@ input::-moz-focus-inner
  */
 
 input
-  line-height normal
+  line-height: normal
 
 /**
  * It's recommended that you don't attempt to style these elements.
@@ -329,8 +295,8 @@ input
 
 input[type="checkbox"],
 input[type="radio"]
-  box-sizing border-box
-  padding 0
+  box-sizing: border-box // 1
+  padding: 0 // 2
 
 /**
  * Fix the cursor style for Chrome's increment/decrement buttons. For certain
@@ -340,19 +306,19 @@ input[type="radio"]
 
 input[type="number"]::-webkit-inner-spin-button,
 input[type="number"]::-webkit-outer-spin-button
-  height auto
+  height: auto
 
 /**
- * 1. Address `appearance` set to `searchfield` in Safari and Chrome.
- * 2. Address `box-sizing` set to `border-box` in Safari and Chrome
+ * 1. Address `appearance` set to `searchfield` in Safari 5 and Chrome.
+ * 2. Address `box-sizing` set to `border-box` in Safari 5 and Chrome
  *    (include `-moz` to future-proof).
  */
 
 input[type="search"]
-  -webkit-appearance textfield
-  -moz-box-sizing content-box
-  -webkit-box-sizing content-box
-  box-sizing content-box
+  -webkit-appearance: textfield // 1
+  -moz-box-sizing: content-box
+  -webkit-box-sizing: content-box // 2
+  box-sizing: content-box
 
 /**
  * Remove inner padding and search cancel button in Safari and Chrome on OS X.
@@ -362,32 +328,32 @@ input[type="search"]
 
 input[type="search"]::-webkit-search-cancel-button,
 input[type="search"]::-webkit-search-decoration
-  -webkit-appearance none
+  -webkit-appearance: none
 
 /**
  * Define consistent border, margin, and padding.
  */
 
 fieldset
-  border 1px solid #c0c0c0
-  margin 0 2px
-  padding 0.35em 0.625em 0.75em
+  border: 1px solid #c0c0c0
+  margin: 0 2px
+  padding: 0.35em 0.625em 0.75em
 
 /**
- * 1. Correct `color` not being inherited in IE 8/9/10/11.
+ * 1. Correct `color` not being inherited in IE 8/9.
  * 2. Remove padding so people aren't caught out if they zero out fieldsets.
  */
 
 legend
-  border 0
-  padding 0
+  border: 0 // 1
+  padding: 0 // 2
 
 /**
- * Remove default vertical scrollbar in IE 8/9/10/11.
+ * Remove default vertical scrollbar in IE 8/9.
  */
 
 textarea
-  overflow auto
+  overflow: auto
 
 /**
  * Don't inherit the `font-weight` (applied by a rule above).
@@ -395,7 +361,7 @@ textarea
  */
 
 optgroup
-  font-weight bold
+  font-weight: bold
 
 /* Tables
    ========================================================================== */
@@ -405,9 +371,9 @@ optgroup
  */
 
 table
-  border-collapse collapse
-  border-spacing 0
+  border-collapse: collapse
+  border-spacing: 0
 
 td,
 th
-  padding 0
+  padding: 0
