--- a/stylus/estilo.styl
+++ b/stylus/estilo.styl
@@ -1,29 +1,57 @@
+@import "nib"
 @import "normalize.styl"
 @import "fonts.styl"
 
+vendor-prefixes = webkit o ms moz official
 gris-oscuro = #333333
 gris-claro = #818181
+gris-fondo = #F0F0F0
 rojo = #BD255B
+
+// animacion(parametro)
+// 	-webkit-animation parametro
+// 	-moz-animation parametro
+// 	-o-animation parametro
+// 	-ms-animation parametro
+// 	animation parametro
 
 body
 	font-size 16px
 	font-family 'Varela Round', sans-serif
 figure
 	margin 0
-a 
+a
 	text-decoration none
-img 
+img
 	vertical-align top
+ul
+	margin 0
+	padding 0
 .header
 	height 3.5em
-	.menu
-		display none
-		back-ground red
 	.title
 		font-size 1.1em
 		text-align center
 		margin 0
 		line-height 3.5rem
+
+.menu
+	display none
+	overflow hidden
+	border-top 1px solid gris-claro
+	.item
+		float left
+		list-style none
+		a
+			color gris-oscuro
+			cursor pointer
+			display block
+			padding 1em
+			text-transform uppercase
+			border-top 5px solid transparent
+			transition .5s border-top
+			&:hover
+				border-top 5px solid gris-claro
 .border-bottom
 	border-bottom 1px solid gris-claro
 .container
@@ -36,7 +64,7 @@ img
 	margin-top -8px
 	position absolute
 	top 50%
-	
+
 //OOCSS Clases
 .relative
 	position relative
@@ -62,10 +90,36 @@ img
 		color rojo
 .relative
 	position relative
+.round
+	border-radius 50%
+	overflow hidden
+.float-left
+	float left
+.float-right
+	float right
 .padding
 	padding 1em
 .padding-tb
 	padding 1em
+.wrap
+	width 1000px
+.input
+	border 1px solid gris-claro
+	height 2.5em
+	border-radius 5px
+	padding 0 1em 0 2em
+.form-icon
+	position absolute
+	top .8em
+	color gris-claro
+	&.left
+		left .5em
+	&.right
+		top .5em
+		right .5em
+		font-size 1.2em
+
+
 .center-block
 	margin 0 auto
 .center-text
@@ -84,15 +138,15 @@ img
 .playing
 	&.small
 		width 20em
+		margin 0 auto
 .progress
 	margin 1em 0
-	.min 
-	.max 
+	.min
+	.max
 		font-size .8em
 		top -5px
 		position absolute
-	.min 
-		
+	.min
 		left 0
 	.max
 		right 0
@@ -107,11 +161,99 @@ img
 		border-radius 5px
 		height 5px
 		width 30%
+		animation 15s state infinite linear
 	.circulo
-		background-color gris-oscuro	
+		background-color gris-oscuro
 		border-radius 50%
 		height 10px
 		position absolute
 		right 0
 		top -2px
 		width 10px
+		animation 1s circle infinite linear
+@keyframes state
+	0%
+		width 0%
+	100%
+		width 100%
+@keyframes circle
+	0%
+		transform scale(1)
+	100%
+		transform scale(1.5)
+		opacity 0
+.playlist
+	width 22em
+	display none
+	padding 0 2em
+	border-left 1px solid gris-claro
+	.list
+		list-style none
+	.item
+		padding 1em 0
+	.action
+		font-size .8em
+.isotipo
+		width 122px
+.logo
+	display none
+	padding 1.3em 0
+	overflow hidden
+	background-color white
+.avatar
+	width 38px
+	height 38px
+.user-name
+	color gris-claro
+	position relative
+	top 8px
+	margin-left .5em
+	&:after
+		content ""
+		border-left 7px solid transparent
+		border-right 7px solid transparent
+		border-top 10px solid gris-claro
+		display inline-block
+		margin-left .4em
+.search
+	margin-right 1.5em
+
+@media screen and (min-width: 480px)
+	.song
+		&:nth-child(even)
+			margin-right 1em
+	.image
+		img
+			width 100%
+			height auto
+	.playing
+		&.medium
+			width auto
+
+@media screen and (min-width: 1000px)
+	body
+		background-color gris-fondo
+	.button-menu
+		display none
+		background-color gris-fondo
+	.playing
+		padding-top 1.3em
+		&.large
+			margin 0 auto
+			width 62.5em
+			overflow hidden
+	.menu
+		display block
+	.music
+		width 32.5em
+		float left
+		.description
+			display none
+	.header
+		height auto
+		border none
+		.title
+			display none
+	.playlist
+	.logo
+		display block
